# galbot_one_golf_description

./: .gitattributes  .gitignore  .lfsconfig  CMakeLists.txt  README.md  package.xml
config/mjcf/: actuator.json  actuator_wheeled.json  appendix.xml  appendix_planar_base.xml  default.json  default_wheeled.json  metadata.json  metadata_floating_base.json  metadata_planar_base.json
config/rviz/: fullbody.rviz  model.rviz  splitbody.rviz
docs/: mjcf.md
launch/: display.launch.py
meshes/collision/: d405.stl  omni_chassis.stl  torso.stl
meshes/collision/arm/: link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl  link7.stl
meshes/collision/head/: head_link1.stl  head_link2.stl
meshes/collision/leg/: link1.stl  link2.stl  link3.stl
mjcf/: galbot_one_golf.xml  galbot_one_golf_collision_only.xml  galbot_one_golf_fixed_base.xml  galbot_one_golf_floating_base.xml  galbot_one_golf_planar_base.xml
scripts/: create_description.py
urdf/: galbot_one_golf.urdf  galbot_one_golf_fixed_base.urdf  galbot_one_golf_left_hitbot_gripper_right_suction_cup.urdf
usd/: galbot_one_golf.usda
usd/configuration/: galbot_one_golf_base.usdc  galbot_one_golf_physics.usda  galbot_one_golf_robot.usda  galbot_one_golf_sensor.usda
usd/envs/: empty.usda
web/: example.html  galbot_g1.html  index.html  quick_view.html
xacro/: component.xacro  robot.xacro
xacro/components/: galbot_gripper.xacro  head.xacro  hitbot_gripper.xacro  left_arm.xacro  leg.xacro  omni_chassis.xacro  omniwheel_10.xacro  right_arm.xacro  suction_cup.xacro  torso.xacro  wrist_camera.xacro
(+52 files in other folders)
